# quizy-shared

./: .gitignore  pyproject.toml
src/quizy_shared/: __init__.py  models.py
src/quizy_shared/core/: security.py  settings.py
src/quizy_shared/decorators/: validation.py
src/quizy_shared/dependencies/: token.py  user_validation.py
src/quizy_shared/schemas/: auth.py  quiz.py  user.py
src/quizy_shared/services/: user_validation_service.py
